--- a/src/App.css
+++ b/src/App.css
@@ -1,25 +1,24 @@
 .App{
     height: 100vh;
-    padding-top: 10px;
+    width: 100%;
     background-color: #1b1b32;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     display: flex;
-    flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
 }
 
 .calculator-container{
-    width: 400px;
-    height: 650px;
-    padding: 14px;
+    margin-top: 50px;
+    width: 50%;
+    height: 75%;
+    padding: 5px 5px;
     background-color: gray;
     border-radius: 20px;
     border: 5px solid #fff
     }
 
 .fila{
-    margin: 4px;
+    margin: 5px;
     display: flex;
     align-items: center;
     justify-content: center;
